Readable post-bundling instructions for smaller screens. Fixes #31

--- a/src/RequireJS/BundleGenerator/ConfigGen.css
+++ b/src/RequireJS/BundleGenerator/ConfigGen.css
@@ -22,16 +22,21 @@
     text-align: center;
     font-size: 1.2em;
     padding: 0 10px;
-    width: 100%;
     height: 100%;
 }
 
 .instructionsWrapper {
     height: calc(100% - 65px);
+    width: 50%;
 }
 
 .instructions :global(h1) {
     font-size: 2em;
+}
+
+.instructions :global(code) {
+    word-break: break-word;
+    white-space: pre-wrap;
 }
 
 .instructions :global(h2) {
